--- a/server/src/login.html
+++ b/server/src/login.html
@@ -6,25 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="./css/signup.css">
-    <script src="./sripts/postUser.js"></script>
+    <script src="./sripts/login.js"></script>
     <script src="./sripts/router.js"></script>
 </head>
 <body>
     <div class="form-box">
         <form class="form" >
-            <span class="title">Sign up</span>
-            <span class="subtitle">Create a free account with your email.</span>
+            <span class="title">Log In</span>
+            <span class="subtitle">Sign in with your username and password.</span>
             <div class="form-container">
               <input type="text" id="username" class="input" placeholder="Username">
               <input type="password" id="password" class="input" placeholder="Password">
-              <input type="text" id="firstName" class="input" placeholder="First Name">  
-              <input type="text" id="lastName" class="input" placeholder="Last Name"> 
-              <input type="email" id="emailAddress" class="input" placeholder="Email">
             </div>
-            <button onclick="register()">Sign up</button>
+            <button onclick="login()">Log In</button>
         </form>
         <div class="form-section">
-          <p>Have an account? <a href="./login.html">Log in</a> </p>
+          <p>New Visitor? <a href="./signup.html">Register Here</a> </p>
         </div>
         </div>
 </body>
