--- a/server/src/index.html
+++ b/server/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="./css/signup.css">
-    <script src="./sripts/login.js"></script>
+    <script src="./sripts/index.js" defer></script>
     <script src="./sripts/router.js"></script>
 </head>
 <body>
@@ -14,6 +14,7 @@
         <form class="form" >
             <span class="title">Welcome</span>
             <span class="subtitle">Main Page</span>
+            <button type='button' onclick="initialize()">Initialize Database</button>
         </form>
     </div>
 </body>
